# tauri-plugin-mpv

./: CHANGELOG.md  Cargo.toml  README.md  package.json
examples/react/src/: mpv.d.ts
examples/snippets/: command.ts  init.ts  listen-events.ts  observe-properties.ts  quick-start.ts  set-video-margin-ratio.ts
src/: process.rs
