[package]
name = "tauri-plugin-mpv"
version = "0.5.1"
authors = ["22"]
description = "A Tauri plugin for embedding the mpv player in your app by controlling its process via JSON IPC."
edition = "2021"
rust-version = "1.77.2"
license = "MPL-2.0"
repository = "https://github.com/nini22P/tauri-plugin-mpv"
keywords = ["tauri", "plugin", "mpv", "media", "player"]
categories = ["multimedia", "gui"]
readme = "README.md"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules", "/target"]
links = "tauri-plugin-mpv"

[dependencies]
tauri = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
raw-window-handle = "0.6"
log = "0.4"
libc = "0.2.176"

[target.'cfg(windows)'.dependencies]

[target.'cfg(unix)'.dependencies]

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
